add service token
